--- a/.travis.yml
+++ b/.travis.yml
@@ -5,19 +5,8 @@ go:
   - 1.10.x
   - 1.11.x
 install:
-  - go get -u github.com/axw/gocov/gocov
-  - go get -u gopkg.in/matm/v1/gocov-html
-  - go get -u github.com/cee-dub/go-junit-report
-  - go get -u github.com/stretchr/testify/assert
-  - go get -u github.com/kr/pretty
-  - go get -u gopkg.in/yaml.v2
-  - go get -u github.com/go-openapi/spec
-  - go get -u github.com/go-openapi/analysis
-  - go get -u github.com/go-openapi/errors
-  - go get -u github.com/go-openapi/loads
-  - go get -u github.com/go-openapi/strfmt
-  - go get -u github.com/go-openapi/runtime
-  - go get -u github.com/docker/go-units
+  - go get -u github.com/golang/dep/cmd/dep
+  - dep ensure -vendor-only
 language: go
 script:
   - go test -v -timeout=1m -race -covermode=atomic ./...
